# OpenVVC

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt
libovvc/: CMakeLists.txt  ovconfig.h.in  ovversion.h.in  stdatomic.h
libovvc/arm/: CMakeLists.txt
libovvc/x86/: CMakeLists.txt
